--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,12 @@ openmediavault (5.0) unstable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
+openmediavault (4.1.8.1-1) stable; urgency=low
+
+  * Fix systemd monit.service issue.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 11 Jun 2018 08:49:09 +0200
+
 openmediavault (4.1.8-1) stable; urgency=low
 
   * Issue #113: Reduce monit delay from 30 to 5 seconds after the daemon is
