--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,12 @@ openmediavault (5.0) unstable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
+openmediavault (4.1.8.2-1) stable; urgency=low
+
+  * Fix debian/postinst issue.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 13 Jun 2018 06:45:35 +0200
+
 openmediavault (4.1.8.1-1) stable; urgency=low
 
   * Fix systemd monit.service issue.
