--- a/deb/openmediavault-snmp/usr/share/openmediavault/locale/hu_HU/openmediavault-snmp.po
+++ b/deb/openmediavault-snmp/usr/share/openmediavault/locale/hu_HU/openmediavault-snmp.po
@@ -89,7 +89,7 @@ msgid "Settings"
 msgstr "Beállítások"
 
 msgid "Traps"
-msgstr "Trep-ek"
+msgstr "Csapdák (Traps)"
 
 msgid "Username"
 msgstr "Felhasználónév"
