--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/hu_HU/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/hu_HU/openmediavault-clamav.po
@@ -6,14 +6,15 @@
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
 # Sári Gábor <sari.gabor@gmail.com>, 2017
 # Gyuris Gellért <bubu@ujevangelizacio.hu>, 2017
+# Sári Gábor <sari.gabor@gmail.com>, 2018
 # Grawens <szabolcs.szanyi@gmail.com>, 2014,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-20 17:55+0000\n"
-"Last-Translator: Gyuris Gellért <bubu@ujevangelizacio.hu>\n"
+"PO-Revision-Date: 2018-07-06 18:34+0000\n"
+"Last-Translator: Sári Gábor <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,7 +23,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Add on-access scan"
-msgstr "Hozzáférési átvizsgálás hozzáadása"
+msgstr "Hozzáférés közbeni átvizsgálás hozzáadása"
 
 msgid "Add scheduled job"
 msgstr "Ütemezett feladat hozzáadása"
@@ -39,7 +40,7 @@ msgid "Antivirus"
 msgstr "Antivírus"
 
 msgid "Be verbose."
-msgstr "Legyen beszédes."
+msgstr "Legyen bőbeszédű."
 
 msgid "Comment"
 msgstr "Megjegyzés"
@@ -66,7 +67,7 @@ msgid "Done ..."
 msgstr "Kész..."
 
 msgid "Edit on-access scan"
-msgstr "Hozzáférési átvizsgálás szerkesztése"
+msgstr "Hozzáférés közbeni átvizsgálás szerkesztése"
 
 msgid "Edit scheduled job"
 msgstr "Ütemezett feladat szerkesztése"
@@ -81,7 +82,7 @@ msgid "Enable archive scanning."
 msgstr "Archívum átvizsgálás engedélyezése."
 
 msgid "Enable on-access virus scanning"
-msgstr "Vírus hozzáférés átvizsgálásának engedélyezése"
+msgstr "Hozzáférés közbeni víruskeresés engedélyezése"
 
 msgid "Enable scanning of ELF files."
 msgstr "ELF fájlok átvizsgálásának engedélyezése."
@@ -179,7 +180,7 @@ msgid ""
 "Please check the <a href='https://github.com/vrtadmin/clamav-"
 "faq/raw/master/manual/clamdoc.pdf' target='_blank'>manual page</a> for more "
 "details."
-msgstr "Kérlek tekintsd meg a <a href='https://github.com/vrtadmin/clamav-faq/raw/master/manual/clamdoc.pdf' target='_blank'>kézikönyvet</a> a további részletekért."
+msgstr "Tekintse meg a <a href='https://github.com/vrtadmin/clamav-faq/raw/master/manual/clamdoc.pdf' target='_blank'>kézikönyvet</a> további részletekért."
 
 msgid "Quarantine"
 msgstr "Karantén"
@@ -224,7 +225,7 @@ msgid "Shared folder"
 msgstr "Megosztott mappa"
 
 msgid "The location of the files to scan on-access."
-msgstr "A fájok helyének átvizsgálása hozzáféréskor."
+msgstr "A fájok helyének átvizsgálása hozzáféréskor"
 
 msgid "The location of the files to scan."
 msgstr "Átvizsgálandó fájlok helye."
