--- a/deb/openmediavault-forkeddaapd/usr/share/openmediavault/locale/hu_HU/openmediavault-forkeddaapd.po
+++ b/deb/openmediavault-forkeddaapd/usr/share/openmediavault/locale/hu_HU/openmediavault-forkeddaapd.po
@@ -5,14 +5,15 @@
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
 # mersaint <mersaint@gmail.com>, 2012
+# Sári Gábor <sari.gabor@gmail.com>, 2018
 # Grawens <szabolcs.szanyi@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-09-19 12:24+0000\n"
-"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
+"PO-Revision-Date: 2018-07-06 07:36+0000\n"
+"Last-Translator: Sári Gábor <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,7 +52,7 @@ msgid "Shared folder"
 msgstr "Megosztott mappa"
 
 msgid "The location of the media files to share."
-msgstr "A megosztani kívánt média fájlok helye."
+msgstr "A megosztani kívánt médiafájlok helye."
 
 msgid "The name of the library as displayed by the clients."
 msgstr "A klienseken megjelenő könyvtár neve."
