--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/hu_HU/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/hu_HU/openmediavault-netatalk.po
@@ -5,14 +5,15 @@
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
 # mersaint <mersaint@gmail.com>, 2012
+# Sári Gábor <sari.gabor@gmail.com>, 2018
 # Grawens <szabolcs.szanyi@gmail.com>, 2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-09-19 12:24+0000\n"
-"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
+"PO-Revision-Date: 2018-07-06 18:27+0000\n"
+"Last-Translator: Sári Gábor <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,7 +31,7 @@ msgid "Allow guest login."
 msgstr "Vendég bejelentkezések engedélyezése."
 
 msgid "Allow guests to create or modify files."
-msgstr "A vendégek létrehozhatnak és módisíthatnak fájlokat."
+msgstr "A vendégek létrehozhatnak és módosíthatnak fájlokat."
 
 msgid "Allow logins with passwords transmitted in the clear."
 msgstr "Jelszóval való bejelentkezés kódolatlan formában történő továbbításának engedélyezése."
@@ -120,7 +121,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Kérlek tekintsd meg a <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>kézikönyvet</a>  a további részletekért."
+msgstr "Tekintse meg a <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>kézikönyvet</a> további részletekért."
 
 msgid "Quota"
 msgstr "Kvóta"
@@ -156,7 +157,7 @@ msgid "Uppercases names in both directions"
 msgstr "Mindkét utasításba nagybetűs nevek kellenek."
 
 msgid "Use AFP3 unix privileges."
-msgstr "AFP3 unix jogosultság használata."
+msgstr "AFP3 unix jogosultságok használata."
 
 msgid "n/a"
 msgstr "n/a"
