--- a/deb/openmediavault-nut/usr/share/openmediavault/locale/hu_HU/openmediavault-nut.po
+++ b/deb/openmediavault-nut/usr/share/openmediavault/locale/hu_HU/openmediavault-nut.po
@@ -5,14 +5,15 @@
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
 # mersaint <mersaint@gmail.com>, 2012
+# Sári Gábor <sari.gabor@gmail.com>, 2018
 # Grawens <szabolcs.szanyi@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-09-19 12:24+0000\n"
-"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
+"PO-Revision-Date: 2018-07-06 18:36+0000\n"
+"Last-Translator: Sári Gábor <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -72,10 +73,10 @@ msgid "Settings"
 msgstr "Beállítások"
 
 msgid "Shutdown mode"
-msgstr "Leállítási üzemmód"
+msgstr "Leállítási mód"
 
 msgid "Shutdown timer"
-msgstr "Leállítás időzítő"
+msgstr "Leállítás időzítése"
 
 msgid "Temperature"
 msgstr "Hőmérséklet"
@@ -86,13 +87,13 @@ msgstr "Az UPS egyedi azonosításához használt név ezen a rendszeren."
 msgid ""
 "The time in seconds until shutdown is initiated. If the UPS happens to come "
 "back before the time is up the shutdown is canceled."
-msgstr "A leállításig hátralévő idő másodpercben. Ha az idő lejárta előtt az UPS online lesz ismét, a leállítás megszakad."
+msgstr "A leállításig hátralévő idő másodpercben. Ha az idő lejárta előtt az UPS ismét online lesz, a leállítás megszakad."
 
 msgid ""
 "To get more information how to configure your UPS please check the Network "
 "UPS Tools <a href='http://www.networkupstools.org/docs/man/ups.conf.html' "
 "target='_blank'>documentation</a>."
-msgstr "További információért az UPS-ed beállításáról, nézd meg a Hálózati UPS Eszközök <a href='http://www.networkupstools.org/docs/man/ups.conf.html' target='_blank'>dokumentumot</a>."
+msgstr "További információkért a UPS beállításáról, nézze meg a Hálózati UPS Eszközök <a href='http://www.networkupstools.org/docs/man/ups.conf.html' target='_blank'>dokumentumot</a>."
 
 msgid "UPS"
 msgstr "UPS"
