--- a/deb/openmediavault-tftp/usr/share/openmediavault/locale/hu_HU/openmediavault-tftp.po
+++ b/deb/openmediavault-tftp/usr/share/openmediavault/locale/hu_HU/openmediavault-tftp.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Volker <votdev@gmx.de>, 2017\n"
+"Last-Translator: Sári Gábor <sari.gabor@gmail.com>, 2017\n"
 "Language-Team: Hungarian (Hungary) (https://www.transifex.com/votdev/teams/14254/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -49,8 +49,8 @@ msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
 "are allowed."
 msgstr ""
-"Kérlek győződj meg róla, hogy a megosztott mappa nyilvánosan írható és az új"
-" fájlok engedélyezettek e."
+"Győződjön meg róla, hogy a megosztott mappa nyilvánosan írható és az új "
+"fájlok engedélyezettek-e."
 
 msgid "Port"
 msgstr "Port"
@@ -71,8 +71,8 @@ msgid ""
 "Specifies the maximum permitted block size. The permitted range for this "
 "parameter is from 512 to 65464."
 msgstr ""
-"Maximálisan engedélyezett blokkméret meghatározása. A megengedett tartomány "
-"mérete 512 és 65464 között van."
+"A maximálisan engedélyezett blokkméret meghatározása. A megengedett "
+"tartomány mérete 512 és 65464 között van."
 
 msgid "TFTP"
 msgstr "TFTP"
