--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/hu_HU/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/hu_HU/openmediavault-usbbackup.po
@@ -5,14 +5,15 @@
 # Translators:
 # Sári Gábor <sari.gabor@gmail.com>, 2017
 # Gyuris Gellért <bubu@ujevangelizacio.hu>, 2017
+# Sári Gábor <sari.gabor@gmail.com>, 2018
 # Grawens <szabolcs.szanyi@gmail.com>, 2014,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-20 17:56+0000\n"
-"Last-Translator: Gyuris Gellért <bubu@ujevangelizacio.hu>\n"
+"PO-Revision-Date: 2018-07-06 18:28+0000\n"
+"Last-Translator: Sári Gábor <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +42,7 @@ msgid "Compress"
 msgstr "Tömörítés"
 
 msgid "Compress file data during the transfer."
-msgstr "Fájl adat tömörítése az átvitel során."
+msgstr "Fájladatok tömörítése az átvitel során."
 
 msgid "Delete"
 msgstr "Törlés"
@@ -67,7 +68,7 @@ msgstr "Archiváló mód engedélyezése."
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr "Engedélyezd ezt az opciót, hogy megmaradjanak a csak részben átküldött fájlok, különben ezek törlésre kerülnek, ha az átvitel megszakad."
+msgstr "Engedélyezze ezt az opciót, hogy megmaradjanak a csak részben átküldött fájlok, különben ezek törlésre kerülnek, ha az átvitel megszakad."
 
 msgid "Enabled"
 msgstr "Engedélyezve"
@@ -96,13 +97,13 @@ msgstr "Mód"
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsync.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Kérlek tekintsd meg a <a href='http://www.samba.org/ftp/rsync/rsync.html' target='_blank'>kézikönyvet</a> a további részletekért."
+msgstr "Tekintse meg a <a href='http://www.samba.org/ftp/rsync/rsync.html' target='_blank'>kézikönyvet</a> további részletekért."
 
 msgid ""
 "Please note that the web interface is blocked until the manually started "
 "backup job has been finished. However the backup job is automatically "
 "executed in the background when the storage device is connected to the host."
-msgstr "Kérlek vedd figyelembe, hogy a webes felület nem lesz elérhető amíg az elkezdett mentési folyamat be nem fejeződik. Ugyanakkor a biztonsági mentés a tárolóeszköz csatlakoztatásakor automatikusan lefut."
+msgstr "Vegye figyelembe, hogy a webes felület nem lesz elérhető amíg az elkezdett mentési folyamat be nem fejeződik. Ugyanakkor a biztonsági mentés a tárolóeszköz csatlakoztatásakor automatikusan lefut."
 
 msgid "Preserve ACLs"
 msgstr "ACL-ek megőrzése"
@@ -132,7 +133,7 @@ msgid "Scan"
 msgstr "Keresés"
 
 msgid "Select a device ..."
-msgstr "Válassz ki egy meghajtót ..."
+msgstr "Válasszon ki egy meghajtót..."
 
 msgid "Send command output via email."
 msgstr "Parancs kimenet elküldése emailben."
