--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (4.1.9) stable; urgency=low
 
+  * Update locales.
   * Issue #128: Fix column widths in S.M.A.R.T. tables.
   * Issue #129: Fix selection bug in icon panel.
   * Update Material Design icons to version 2.4.85.
