--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -9,6 +9,7 @@
 # azlk azlk <phg.azlk@gmail.com>, 2012
 # Ichi <ichiperm@gmail.com>, 2012
 # mictian <ffrants@gmail.com>, 2012
+# Volker <votdev@gmx.de>, 2018
 # azlk azlk <phg.azlk@gmail.com>, 2012
 # Артур Мудрых <arturmon82@gmail.com>, 2012-2013,2015-2016
 # Артур Мудрых <arturmon82@gmail.com>, 2017
@@ -17,7 +18,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
+"PO-Revision-Date: 2018-07-11 06:32+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
@@ -2366,7 +2367,7 @@ msgstr "Питкэрн"
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/exports' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Ознакомьтесь со <a href='http://linux.die.net/man/5/exports' target='_blank'>страницей описания</ A> для более подробной информации."
+msgstr "Ознакомьтесь со <a href='http://linux.die.net/man/5/exports' target='_blank'>страницей описания</a> для более подробной информации."
 
 msgid ""
 "Please check the <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' "
