rrdtool: Use SVG images to make reports nicely scalable
Using SVG not only improves the readability of the graphs but
also makes them scalable on all sorts of resolutions or zoom
levels (e.g. on HiDpi/Retina screens)

Signed-off-by: Florian Floimair <florian.floimair@gmail.com>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -6,6 +6,7 @@ openmediavault (5.0) unstable; urgency=low
     will not only create the configuration files, it will also take care
     about to start/stop/restart the services.
   * Issue #93: Use chrony instead of ntpd.
+  * Use SVG images for rrdtool visualizations. Existing plugins must be adapted.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
