--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.1.10) stable; urgency=low
+
+  * Do not show details button in error dialog if text is empty.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Aug 2018 08:46:58 +0200
+
 openmediavault (4.1.9) stable; urgency=low
 
   * Update locales.
