--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-07-06 18:25+0000\n"
-"Last-Translator: Sári Gábor <sari.gabor@gmail.com>\n"
+"PO-Revision-Date: 2018-08-07 11:33+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1605,7 +1605,7 @@ msgid ""
 "greater than or equal to 1024). It is strongly recommended that the chosen "
 "range be large enough to handle many simultaneous passive connections (for "
 "example, 49152-65534, the IANA-registered ephemeral port range)."
-msgstr "Egyes esetekben passzív port tartományokat kell megadnia a tűzfal korlátozások kikerüléséhez A passzív portok korlátozhatják a portok tartományát, melyből a szerver válogathat, mikor a kliens elküldi a PASV parancsot. A szerver véletlenszerűen választ egy portot a tartományból addig, amíg nyitott portot nem talál. A kiválasztott port tartománynak nem privilegizált tartománynak kell lennie (pl. nagyobb vagy egyenlő mint 1024). Erősen ajánlott olyan nagy tartomány választása, mely elég nagy több passzív kapcsolat egyidejű használatához (például: 49152-65534, az IANA-regisztrált rövid idejű port tartomány)."
+msgstr "Egyes esetekben passzív port tartományokat kell megadnia a tűzfal korlátozások kikerüléséhez. A passzív portok korlátozhatják a portok tartományát, melyből a szerver válogathat, mikor a kliens elküldi a PASV parancsot. A szerver véletlenszerűen választ egy portot a tartományból addig, amíg nyitott portot nem talál. A kiválasztott port tartománynak nem privilegizált tartománynak kell lennie (pl. nagyobb vagy egyenlő mint 1024). Erősen ajánlott olyan nagy tartomány választása, mely elég nagy több passzív kapcsolat egyidejű használatához (például: 49152-65534, az IANA-regisztrált rövid idejű port tartomány)."
 
 msgid "Incoming"
 msgstr "Bejövő"
@@ -2417,7 +2417,7 @@ msgid "Please reload the page to let the changes take effect."
 msgstr "Frissítse az oldalt a változtatások érvénybe léptetéséhez."
 
 msgid "Please wait ..."
-msgstr "Kis türelmet..."
+msgstr "Kis türelmet ..."
 
 msgid ""
 "Please wait until the RAID has been initialized before creating a file "
@@ -2525,10 +2525,10 @@ msgid "Puerto Rico"
 msgstr "Puerto Rico"
 
 msgid "Pull"
-msgstr "Húzás (Pull)"
+msgstr "Húzás"
 
 msgid "Push"
-msgstr "Tolás (Push)"
+msgstr "Tolás"
 
 msgid "Qatar"
 msgstr "Katar"
