Postfix now listens on localhost instead of loopback-only.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -12,6 +12,7 @@ openmediavault (5.0) unstable; urgency=low
 openmediavault (4.1.10) stable; urgency=low
 
   * Do not show details button in error dialog if text is empty.
+  * Postfix now listens on localhost instead of loopback-only.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Aug 2018 08:46:58 +0200
 
