Issue #161: omv_is_ipv6_enabled function raises error with IPv4 only.
Signed-off-by: Volker Theile <votdev@gmx.de>
(cherry picked from commit d4a6a36844439f2ea17879e95890cebc2f3b30de)

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -13,6 +13,7 @@ openmediavault (4.1.10) stable; urgency=low
 
   * Do not show details button in error dialog if text is empty.
   * Postfix now listens on localhost instead of loopback-only.
+  * Issue #161: omv_is_ipv6_enabled function raises error with IPv4 only.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Aug 2018 08:46:58 +0200
 
