--- a/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Henrik Sandström <inactive+sandstroem@transifex.com>, 2012
+# Jonatan Nyberg, 2018
 # Jonatan Nyberg, 2017-2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-25 04:44+0000\n"
+"PO-Revision-Date: 2018-08-26 06:44+0000\n"
 "Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +40,7 @@ msgid "0 KiB/s means unlimited."
 msgstr "0 KiB/s betyder ingen begränsning."
 
 msgid "1 - Minimum power usage with standby (spindown)"
-msgstr "1 - Minimal strömförbrukning med vänteläge (spindown)"
+msgstr "1 - Lägsta strömförbrukning med vänteläge (spindown)"
 
 msgid "1 day"
 msgstr "1 dag"
@@ -73,7 +74,7 @@ msgid "127 - Intermediate power usage with standby"
 msgstr "127 - Mellanliggande strömförbrukning med vänteläge"
 
 msgid "128 - Minimum power usage without standby (no spindown)"
-msgstr "128 - Minimal strömförbrukning utan vänteläge (ingen spindown)"
+msgstr "128 - Lägsta strömförbrukning utan vänteläge (ingen spindown)"
 
 msgid "15 minutes"
 msgstr "15 minuter"
@@ -112,7 +113,7 @@ msgid "25 years"
 msgstr "25 år"
 
 msgid "254 - Maximum performance, maximum power usage"
-msgstr "254 - Maximal prestanda, maximal strömförbrukning"
+msgstr "254 - Högsta prestanda, högsta strömförbrukning"
 
 msgid "255 - Disabled"
 msgstr "255 - Inaktiverad"
@@ -1922,31 +1923,31 @@ msgid "Max. login attempts"
 msgstr "Max. inloggningsförsök"
 
 msgid "Maximum download rate (KiB/s)"
-msgstr "Maximal nedladdningshastighet (KiB/s)"
+msgstr "Högsta hämtningshastighet (KiB/s)"
 
 msgid ""
 "Maximum idle time in seconds. Setting idle timeout to 0 disables the idle "
 "timer completely (clients can stay connected for ever, without sending "
 "data)."
-msgstr "Maximal inaktiv tid i sekunder. Ställer du timeout för vilotid till 0 inaktiveras  timern för vilotid helt (klienter kan hålla kontakten för alltid, utan att skicka data)."
+msgstr "Längsta inaktiva tid i sekunder. Ställer du timeout för vilotid till 0 inaktiveras tidtagaren för vilotid helt (klienter kan hålla kontakten för alltid, utan att skicka data)."
 
 msgid "Maximum number of allowed password attempts before disconnection."
-msgstr "Maximalt antal tillåtna lösenordsförsök innan frånkoppling."
+msgstr "Högsta antal tillåtna lösenordsförsök innan frånkoppling."
 
 msgid "Maximum number of connections per IP (0 = unlimited)."
-msgstr "Maximalt antal anslutningar per IP (0 = obegränsad)."
+msgstr "Högsta antal anslutningar per IP (0 = obegränsad)."
 
 msgid "Maximum number of simultaneous clients."
-msgstr "Maximalt antal samtidiga klienter."
+msgstr "Högsta antal samtidiga klienter."
 
 msgid "Maximum performance, maximum acoustic output"
-msgstr "Maximal prestanda, maximal ljudnivå"
+msgstr "Högsta prestanda, högsta ljudnivå"
 
 msgid "Maximum upload rate (KiB/s)"
-msgstr "Maximal uppladdningshastighet (KiB/s)"
+msgstr "Högsta sändningshastighet (KiB/s)"
 
 msgid "Maximum {0} selected item(s) allowed"
-msgstr "Maximalt {0} valda objekt tillåtna"
+msgstr "Högst {0} valda objekt tillåtna"
 
 msgid "May"
 msgstr "Maj"
@@ -1985,10 +1986,10 @@ msgid "Midway Islands"
 msgstr "Midwayöarna"
 
 msgid "Minimum"
-msgstr "Minimal"
+msgstr "Lägsta"
 
 msgid "Minimum performance, Minimum acoustic output"
-msgstr "Minimal prestanda, minimal ljudnivå"
+msgstr "Lägsta prestanda, lägsta ljudnivå"
 
 msgid "Minimum {0} selected item(s) required"
 msgstr "Minst {0} vald(a) objekt krävs"
@@ -3577,7 +3578,7 @@ msgstr "Det här alternativet anger gruppens namn som filöverföringar till och
 msgid ""
 "This option specifies the maximum number of simultaneous connections. 0 "
 "means no limit."
-msgstr "Det här alternativet anger det maximala antalet samtidiga anslutningar. 0 betyder ingen gräns."
+msgstr "Det här alternativet anger det högsta antalet samtidiga anslutningar. 0 betyder ingen gräns."
 
 msgid ""
 "This option specifies the user name that file transfers to and from that "
