--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -9,6 +9,12 @@ openmediavault (5.0) unstable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
+openmediavault (4.1.11) stable; urgency=low
+
+  * Various CSS improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 29 Aug 2018 07:43:07 +0200
+
 openmediavault (4.1.10) stable; urgency=low
 
   * Do not show details button in error dialog if text is empty.
