--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -12,6 +12,7 @@ openmediavault (5.0) unstable; urgency=low
 openmediavault (4.1.11) stable; urgency=low
 
   * Various CSS improvements.
+  * Use relative URL paths. Thanks to zguithues for showing this problem.
   * Issue #167: Improve \OMV\System\Process::setEnv() method to allow plugin
     developers to disable localization when applications are executed. Default
     is LANG=C.
