--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -8,6 +8,7 @@ openmediavault (4.1.11) stable; urgency=low
   * Improve 'Check RRD database' in omv-firstaid. Handle errors like
     'ERROR: '.../cpu-0/cpu-nice.rrd' is not an RRD file'.
   * Issue #169: Make sure cron-apt refrain file does not exist.
+  * Issue #170: Fix locale bug in PHP autoloader.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 29 Aug 2018 07:43:07 +0200
 
