--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/pl_PL/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/pl_PL/openmediavault-clamav.po
@@ -4,15 +4,15 @@
 # 
 # Translators:
 # Cyryl Sochacki <cyrylsochacki@gmail.com>, 2012
-# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2013-2014,2017
+# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2013-2014,2017-2018
 # jacekniedziolka71 <lucas71@interia.pl>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-08-31 07:31+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/votdev/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +24,7 @@ msgid "Add on-access scan"
 msgstr ""
 
 msgid "Add scheduled job"
-msgstr ""
+msgstr "Dodaj zaplanowane zadanie"
 
 msgid "Algorithmic detection"
 msgstr "Wykrywanie algorytmiczne"
@@ -62,13 +62,13 @@ msgid "Detect broken executables"
 msgstr "Wykryj przerwane pliki wykonywalne"
 
 msgid "Done ..."
-msgstr ""
+msgstr "Zrobione ..."
 
 msgid "Edit on-access scan"
 msgstr ""
 
 msgid "Edit scheduled job"
-msgstr ""
+msgstr "Edytuj zaplanowane zadanie"
 
 msgid "Enable"
 msgstr "Włącz"
@@ -115,7 +115,7 @@ msgid "Every N minute"
 msgstr "Co N minut"
 
 msgid "Execute scheduled job"
-msgstr ""
+msgstr "Wykonaj zaplanowane zadanie"
 
 msgid "Extra options"
 msgstr "Dodatkowe opcje"
