--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/pl_PL/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/pl_PL/openmediavault-usbbackup.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault-usbbackup package.
 # 
 # Translators:
-# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2013-2014
+# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2013-2014,2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-08-31 07:28+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/votdev/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,7 +51,7 @@ msgid "Device"
 msgstr "Urządzenie"
 
 msgid "Done ..."
-msgstr ""
+msgstr "Zrobione ..."
 
 msgid "Edit backup job"
 msgstr "Edytuj zadanie kopii"
