--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.1.12) stable; urgency=low
+
+  * Fix display bug in S.M.A.R.T. attributes grid.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 13 Sep 2018 07:59:35 +0200
+
 openmediavault (4.1.11) stable; urgency=low
 
   * Update locales.
