Fix display bug in S.M.A.R.T. attributes grid.
Signed-off-by: Volker Theile <votdev@gmx.de>
(cherry picked from commit 2eb826d97d802950c547150cb83fe0cc4c95bc7f)

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -9,6 +9,12 @@ openmediavault (5.0) unstable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
+openmediavault (4.1.12) stable; urgency=low
+
+  * Fix display bug in S.M.A.R.T. attributes grid.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 13 Sep 2018 07:59:35 +0200
+
 openmediavault (4.1.11) stable; urgency=low
 
   * Update locales.
