Add UI to copy public SSH key to remote machine.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,7 @@ openmediavault (4.1.12) stable; urgency=low
   * Fix display bug in S.M.A.R.T. attributes grid.
   * Improve network interface deletion.
   * Fix sharedfolders-<NAME>.mount issue.
+  * Add UI to copy public key of a SSH certificate to a remote machine.
   * Issue #174: omv-mkconf monit script may calculate incorrect number of CPUs.
   * Issue #178: Improve password/public key handling in rsync jobs.
 
